# app

./: .env.example  .gitignore  PRODUCT.md  README.md  WORKLOG.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts  wrangler.toml
best-xgboost-classifier-20260609-172920-627d6-export/best-xgboost-classifier-20260609-172920-627d6/: README.md  featurize.json  input-schema.json  lensing-export.json  model.onnx  pca_components.f32
burn-deep-embeddings-highvocab-export/burn-deep-embeddings-highvocab/: README.md  featurize.json  lensing-export.json  model.onnx  pca_components.f32
docs/: make_figures.py  models-dev.tex  models-pm.tex  models.tex
docs/sweeps/: astar_sweep.json  example.json  load_runs.py  run_astar_sweep.py  run_example.py  run_xgb_sweep.py  runs.json  xgb_sweep.json
server/: app.py  requirements.txt
src/: main.tsx  styles.css
tools/: SNAPSHOT_FORMAT.md  _parity_ref.py  build_champion.py  build_champion_parity.py  build_layout.py  build_snapshot.py  build_snapshot_sonic.py  export_scorer.py
worker/: index.ts
worker-core/: Cargo.toml
worker-core/src/: champion.rs  lib.rs  pathfind.rs  pca.rs  project.rs  scorer.rs  snapshot.rs  transit.rs
worker-core/tests/: arrange.rs  champion.rs  parity.rs  parity_ref.json  projector.rs  route_open.rs  scorer.rs
worker-core/tests/fixtures/: champion_parity.json  scorer_parity.json
